# speculative-system-designer

./: .env.example  .gitignore  README.md  claude_desktop_config.json  plan.md  requirements.txt
architectures/Design a backend system that ingests eve/: Final Architecture.txt  Initial Architecture.txt  diagram_final.excalidraw  diagram_initial.excalidraw
architectures/concert_ticketing_platform/: Final Architecture.txt  Simulated Future - regulatory_compliance.txt  Simulated Future - scaling.txt  Simulated Future - security_abuse.txt
architectures/live_cricket_score_tracking/: Final Architecture.txt  Initial Architecture.txt  Simulated Future - regulatory_compliance.txt  Simulated Future - scaling.txt  Simulated Future - security_abuse.txt
client/: mcp_client.py  mcp_client_new.py  run_design_session.py
data/: futures.json  roots.json
host/: README.md  graph.py  handlers.py  nodes.py  run.py  state.py
server/: CONCEPTS.md  README.md  TOOLS.md  architectures.py  critiques.py  declare_tradeoff.py  futures.py  mcp_server.py  pyproject.toml  requirements.txt  roots.py  server.py  store.py  test.py
server/prompts/: scaling_future.txt  templates.py
server/resources/: architectures.py  critiques.py  futures.py  roots.py
server/state/: store.py
server/tools/: declare_tradeoff.py  evaluate_architecture.py  simulate_future.py  submit_architecture.py
